5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1679_1100.log
== TEST (2019-04-30 16:15:58) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico-leão-dourado"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:08) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico-leão-dourado"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:24) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico-leao-dourado"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:30) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Micoleaodourado"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:33) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Micoleaodourado"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:43) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "MicoleaodouradoMico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:49) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:17:11) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:17:24) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:17:37) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 15):
		animal = "Mico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 15):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:17:41) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	if (a == 5):
		animal = "Garça"
	if (a == 10):
		animal = "Arara"
   if (a == 20):
		animal = "Mico"
	if (a == 50):
		animal = "Onça-Pintada"
	if (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    if (a == 20):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:18:10) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "Onça-Pintada"
	elif (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:18:29) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "Onça-Pintada"
	elif (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:08) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "OnçaPintada"
	elif (a == 100)
	   animal = "Garoupa"
		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:16) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"

		
print("Animal:" animal)

-- ERROR:
File "XXXX", line 8
    print("Animal:" animal)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:29) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "OnçaPintada"
	elif (a == 100)
	   animal = "Garoupa"
		


-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:36) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"

		


-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:19:50) 
-- CODE:
a = int(input("valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"

		


-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:20:27) 
-- CODE:
a = int(input("valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"






print("Animal:"animal )
-- ERROR:
File "XXXX", line 16
    print("Animal:"animal )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:20:31) 
-- CODE:
a = int(input("valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"






print("Animal:",animal )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Animal:",animal )
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:21:04) 
-- CODE:
a = int(input("valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"






print("Animal:" ,animal )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Animal:" ,animal )
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:21:19) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "OnçaPintada"
	elif (a == 100)
	   animal = "Garoupa"
		
print("Animal:" ,animal)

-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:21:28) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
   elif (a == 20):
		animal = "Mico"
	elif (a == 50):
		animal = "OnçaPintada"
	elif (a == 100)
	   animal = "Garoupa"
		
print("Animal:" ,animal)
-- ERROR:
File "XXXX", line 10
    elif (a == 20):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:21:38) 
-- CODE:
a = int(input())

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:21:47) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:22:14) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
	elif (a == 20):
		animal = "Mico-leao-dourado"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:22:51) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
	elif (a == 20):
		animal = "Mico-leao-dourado"
	elif (a == 50):
		animal = "Onça-pintada"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:23:06) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
	elif (a == 20):
		animal = "Mico-leao-dourado"
	elif (a == 50):
		animal = "Onça-pintada"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:23:29) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		animal = "Tartaruga"
	elif (a == 5):
		animal = "Garça"
	elif (a == 10):
		animal = "Arara"
	elif (a == 20):
		animal = "Mico-leao-dourado"
	elif (a == 50):
		animal = "Onça-pintada"
		
print("Animal:" ,animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:23:48) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:24:30) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print("Tipo de triangulo:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Tipo de triangulo:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:24:44) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:25:13) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = Onça-pintada
		
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:25:29) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print("Animal:" ,"d")
-- OUTPUT:
Animal: d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:25:38) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print("Animal:" ,"d")
-- OUTPUT:
Animal: d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:25:48) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onça-pintada"
		
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:26:12) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	if (a == 5):
		d = "Garça"
	if (a == 10):
		d = "Arara"
	if (a == 20):
		d = "Mico-leao-dourado"
	if (a == 50):
		d = "Onça-pintada"
		
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:26:34) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"

print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:27:05) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5): 
		d = "Garça"

print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:27:23) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:27:29) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:20) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif(a == 5):
		d = "Garça"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:35) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif(a == 5):
		d = "Garça"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:41) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif(a == 5):
		d = "Garça"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:29:57) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:30:27) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garça"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:30:39) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:31:10) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
print("Animal:" ,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print("Animal:" ,d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:32:13) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:32:19) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- EXECUTION TIME:
0.139712
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:32:24) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- EXECUTION TIME:
0.174814
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:48:02) 
-- CODE:
a = int(input("Valor:"))

if (a > 0):
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- EXECUTION TIME:
0.293682
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:49:32) 
-- CODE:
a = int(input("Valor:"))

if (a != 2 != 5 != 10 != 20 != 50 !=100):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:49:37) 
-- CODE:
a = int(input("Valor:"))

if (a != 2 != 5 != 10 != 20 != 50 !=100):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"
	elif (a != 2 != 5 != 10 != 20 != 50 !=100):
		d = "Invalido"
print("Animal:" ,d)
-- EXECUTION TIME:
0.163637
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:49:42) 
-- CODE:
a = int(input("Valor:"))

if (a != 2 != 5 != 10 != 20 != 50 !=100):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Animal:" ,d)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:49:46) 
-- CODE:
a = int(input("Valor:"))

if (a != 2 != 5 != 10 != 20 != 50 !=100):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Animal:" ,d)
-- EXECUTION TIME:
0.128688
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:49:52) 
-- CODE:
a = int(input("Valor:"))

if (a != 2 != 5 != 10 != 20 != 50 !=100):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Animal:" ,d)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:51:02) 
-- CODE:
a = int(input("Valor:"))

if ((a != 2 != 5 != 10 != 20 != 50 !=100) or (a < 0)):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Animal:" ,d)
-- EXECUTION TIME:
0.209204
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:51:37) 
-- CODE:
a = int(input("Valor:"))

if ((a != 2 != 5 != 10 != 20 != 50 !=100) or (a < 0)):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Entrada" ,a)
print("Animal:" ,d)
-- EXECUTION TIME:
0.144059
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:38) 
-- CODE:
a = int(input("Valor:"))

if ((a != 2 != 5 != 10 != 20 != 50 !=100) or (a < 0)):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Entrada" ,a)
print("Animal:" ,d)
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:51:46) 
-- CODE:
a = int(input("Valor:"))

if ((a != 2 != 5 != 10 != 20 != 50 !=100) or (a < 0)):
	d = "Invalido" 
	if (a == 2):
		d = "Tartaruga"
	elif (a == 5):
		d = "Garca"
	elif (a == 10):
		d = "Arara"
	elif (a == 20):
		d = "Mico-leao-dourado"
	elif (a == 50):
		d = "Onca-pintada"
	elif (a == 100):
		d = "Garoupa"

print("Entrada:" ,a)
print("Animal:" ,d)
-- EXECUTION TIME:
0.160571
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
